find avis by user id solved